--- a/src/main/resources/fxml/nakyma.fxml
+++ b/src/main/resources/fxml/nakyma.fxml
@@ -51,7 +51,7 @@
          </GridPane.margin>
       </Label>
       <ImageView fx:id="logoView" fitHeight="138.0" fitWidth="483.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowSpan="2" />
-      <TextField fx:id="searchBar" onKeyReleased="#searchFunction" prefHeight="39.0" prefWidth="1149.0" promptText="Etsi..." GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2" stylesheets="@../styles/Styles.css">
+      <TextField fx:id="searchBar" onKeyReleased="#searchFunction" prefHeight="39.0" prefWidth="1149.0" promptText="Etsi..." stylesheets="@../styles/Styles.css" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2">
          <font>
             <Font size="18.0" />
          </font>
@@ -87,7 +87,7 @@
                               <TableColumn fx:id="tyyppiColumn" minWidth="0.0" onEditCommit="#tyyppiOnEditCommit" prefWidth="175.20001220703125" resizable="false" text="TYYPPI" />
                               <TableColumn fx:id="luvanvaraisuusColumn" onEditCommit="#luvanvaraisuusOnEditCommit" prefWidth="168.8001708984375" resizable="false" text="LUVANVARAISUUS" />
                               <TableColumn fx:id="kuvausColumn" onEditCommit="#kuvausOnEditCommit" prefWidth="668.0001831054688" resizable="false" text="KUVAUS" />
-                              <TableColumn fx:id="tilaColumn" maxWidth="115.2001953125" minWidth="0.0" onEditCommit="#tilaOnEditCommit" prefWidth="114.39990234375" text="TILA" />
+                              <TableColumn fx:id="tilaColumn" maxWidth="115.2001953125" minWidth="0.0" onEditCommit="#tilaOnEditCommit" prefWidth="114.39990234375" resizable="false" text="TILA" />
                            </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -103,13 +103,14 @@
                      <children>
                         <TableView fx:id="omatTable" maxWidth="-Infinity" prefHeight="530.0" prefWidth="1491.0">
                            <columns>
-                              <TableColumn fx:id="laitenimiColumn" editable="false" prefWidth="289.60010319948196" text="LAITTEEN NIMI" />
-                              <TableColumn fx:id="alkupvmColumn" prefWidth="204.7999267578125" resizable="false" text="VARAUKSEN ALKUPVM" />
-                              <TableColumn fx:id="paattymispvmColumn" prefWidth="232.00006103515625" resizable="false" text="VARAUKSEN PÄÄTTYMISPVM" />
-                              <TableColumn fx:id="varausidColumn" editable="false" prefWidth="120.79998779296875" resizable="false" text="VARAUSID" />
-                              <TableColumn fx:id="varauskuvausColumn" onEditCommit="#kuvausOnEditCommit" prefWidth="365.59991455078125" resizable="false" text="KUVAUS" />
-                              <TableColumn fx:id="palautettuColumn" maxWidth="227.0" minWidth="0.0" prefWidth="141.5999755859375" resizable="false" text="AKTIIVISUUS" />
-                              <TableColumn fx:id="hyvaksyntaColumn" maxWidth="330.39990234375" minWidth="0.0" prefWidth="130.4000244140625" resizable="false" text="HYVÄKSYNTÄ" />
+                              <TableColumn fx:id="laitenimiColumn" editable="false" prefWidth="240.80002385377884" resizable="false" text="LAITTEEN NIMI" />
+                              <TableColumn fx:id="alkupvmColumn" prefWidth="216.00003051757812" resizable="false" text="VARAUKSEN ALKUPVM" />
+                              <TableColumn fx:id="paattymispvmColumn" prefWidth="228.00006103515625" resizable="false" text="VARAUKSEN PÄÄTTYMISPVM" />
+                              <TableColumn fx:id="varausidColumn" editable="false" prefWidth="124.0" resizable="false" text="VARAUSID" />
+                              <TableColumn fx:id="varauskuvausColumn" onEditCommit="#kuvausOnEditCommit" prefWidth="305.5999755859375" resizable="false" text="KUVAUS" />
+                              <TableColumn fx:id="palautettuColumn" maxWidth="227.0" minWidth="0.0" prefWidth="132.0" resizable="false" text="AKTIIVISUUS" />
+                              <TableColumn fx:id="hyvaksyntaColumn" maxWidth="330.39990234375" minWidth="0.0" prefWidth="151.2000732421875" resizable="false" text="HYVÄKSYNTÄ" />
+                              <TableColumn fx:id="poistoColumn" maxWidth="330.39990234375" minWidth="0.0" prefWidth="92.0" resizable="false" text="POISTO" />
                            </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -160,15 +161,23 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </Button>
+            <Button fx:id="historiaBtn" mnemonicParsing="false" onMouseClicked="#historiaBtnPainettu" prefHeight="39.0" prefWidth="363.0" text="RESURSSIN VARAUSHISTORIA" textOverrun="CLIP">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="25.0" />
+               </VBox.margin>
+            </Button>
             <TitledPane fx:id="kalenteriPane" alignment="CENTER" animated="false" prefHeight="273.0" prefWidth="338.0" text="KALENTERI" textAlignment="CENTER">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
                <VBox.margin>
-                  <Insets bottom="25.0" top="25.0" />
+                  <Insets top="25.0" />
                </VBox.margin>
                <content>
-                  <StackPane fx:id="kalenteriStackPane" prefHeight="246.0" prefWidth="336.0" />
+                  <StackPane fx:id="kalenteriStackPane" prefHeight="178.0" prefWidth="332.0" />
                </content>
             </TitledPane>
          </children>
@@ -182,7 +191,7 @@
       <DatePicker fx:id="datePicker" disable="true" opacity="0.0" prefHeight="35.0" prefWidth="330.0" GridPane.columnIndex="3" />
       <HBox prefHeight="26.0" prefWidth="234.0" GridPane.columnIndex="7" GridPane.valignment="BOTTOM">
          <children>
-            <Button fx:id="LogoutBtn" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="30.0" prefWidth="107.0" text="LOGOUT">
+            <Button fx:id="LogoutBtn" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="30.0" prefWidth="107.0" text="LOGOUT" textOverrun="CLIP">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
@@ -190,7 +199,7 @@
                   <Insets right="10.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="salasananvaihtoBtn" mnemonicParsing="false" onMouseClicked="#salasananvaihtoNappiPainettu" prefHeight="30.0" prefWidth="123.0" text="SALASANAN VAIHTO">
+            <Button fx:id="salasananvaihtoBtn" mnemonicParsing="false" onMouseClicked="#salasananvaihtoNappiPainettu" prefHeight="30.0" prefWidth="123.0" text="SALASANAN VAIHTO" textOverrun="CLIP">
                <font>
                   <Font name="System Bold" size="10.0" />
                </font>
