--- a/src/main/resources/fxml/VarausAdmin.fxml
+++ b/src/main/resources/fxml/VarausAdmin.fxml
@@ -16,12 +16,12 @@
 
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="876.0" prefWidth="1772.0" style="-fx-background-image: url(&quot;/bgLarge.png&quot;);" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.VarausAdminController">
   <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="260.60004577636715" minWidth="0.0" prefWidth="182.20001831054688" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="301.2" minWidth="0.0" prefWidth="118.19998168945315" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="260.60004577636715" minWidth="0.0" prefWidth="92.00000610351564" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="301.2" minWidth="0.0" prefWidth="208.79999389648438" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="520.6000244140625" minWidth="10.0" prefWidth="479.2" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="248.4000366210937" minWidth="10.0" prefWidth="170.39999999999998" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="696.0" minWidth="10.0" prefWidth="644.8000000000001" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="472.0" minWidth="0.0" prefWidth="59.200000000000045" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="705.6" minWidth="10.0" prefWidth="648.799951171875" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="472.0" minWidth="0.0" prefWidth="56.800048828125" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="157.0" minWidth="0.0" prefWidth="70.40000000000009" />
   </columnConstraints>
   <rowConstraints>
@@ -86,7 +86,7 @@
                               <TableColumn fx:id="tavaraColumn" prefWidth="426.39996337890625" resizable="false" text="TAVARA" />
                               <TableColumn fx:id="alkupvmColumn" minWidth="0.0" onEditCommit="#alkupvmEditCommit" prefWidth="233.5999755859375" resizable="false" text="ALKUPVM" />
                               <TableColumn fx:id="paattymispvmColumn" minWidth="0.0" onEditCommit="#paattymispvmEditCommit" prefWidth="192.79998779296875" resizable="false" text="PÄÄTTYMISPVM" />
-                              <TableColumn fx:id="kuvausColumn" maxWidth="692.0000122070312" onEditCommit="#kuvausEditCommit" prefWidth="278.4000244140625" resizable="false" text="KUVAUS" />
+                              <TableColumn fx:id="kuvausColumn" maxWidth="692.0000122070312" onEditCommit="#kuvausEditCommit" prefWidth="365.6000732421876" resizable="false" text="KUVAUS" />
                            </columns>
                         </TableView>
                      </children>
@@ -97,16 +97,16 @@
                <content>
                   <StackPane fx:id="omatStack" prefHeight="530.0" prefWidth="981.0">
                      <children>
-                        <TableView fx:id="omatTable" maxWidth="-Infinity" prefHeight="570.0" prefWidth="1567.0">
+                        <TableView fx:id="kaikkiTable" maxWidth="-Infinity" prefHeight="570.0" prefWidth="1567.0">
                            <columns>
                               <TableColumn fx:id="varaajannimiColumn" prefWidth="75.0" text="VARAAJAN NIMI" />
                               <TableColumn fx:id="laitenimiColumn" editable="false" prefWidth="289.60010319948196" text="LAITTEEN NIMI" />
-                              <TableColumn fx:id="alkupvmColumn1" prefWidth="204.7999267578125" resizable="false" text="VARAUKSEN ALKUPVM" />
-                              <TableColumn fx:id="paattymispvmColumn1" prefWidth="232.00006103515625" resizable="false" text="VARAUKSEN PÄÄTTYMISPVM" />
+                              <TableColumn fx:id="kaikkialkupvmColumn" prefWidth="204.7999267578125" resizable="false" text="VARAUKSEN ALKUPVM" />
+                              <TableColumn fx:id="kaikkipaattymispvmColumn" prefWidth="232.00006103515625" resizable="false" text="VARAUKSEN PÄÄTTYMISPVM" />
                               <TableColumn fx:id="varausidColumn" editable="false" prefWidth="120.79998779296875" resizable="false" text="VARAUSID" />
-                              <TableColumn fx:id="varauskuvausColumn" prefWidth="365.59991455078125" resizable="false" text="KUVAUS" />
-                              <TableColumn fx:id="palautettuColumn" maxWidth="227.0" minWidth="0.0" prefWidth="141.5999755859375" resizable="false" text="AKTIIVISUUS" />
-                              <TableColumn fx:id="hyvaksyntaColumn" maxWidth="330.39990234375" minWidth="0.0" prefWidth="130.4000244140625" resizable="false" text="HYVÄKSYNTÄ" />
+                              <TableColumn fx:id="varauskuvausColumn" prefWidth="261.60009765625" resizable="false" text="KUVAUS" />
+                              <TableColumn fx:id="palautettuColumn" maxWidth="423.199951171875" minWidth="0.0" prefWidth="90.39990234375" resizable="false" text="AKTIIVISUUS" />
+                              <TableColumn fx:id="hyvaksyntaColumn" maxWidth="330.39990234375" minWidth="0.0" prefWidth="102.39990234375" resizable="false" text="HYVÄKSYNTÄ" />
                            </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
