--- a/src/main/resources/fxml/ResurssiHistoria.fxml
+++ b/src/main/resources/fxml/ResurssiHistoria.fxml
@@ -25,7 +25,7 @@
       <RowConstraints maxHeight="209.60002441406255" minHeight="0.0" prefHeight="35.0" vgrow="SOMETIMES" />
    </rowConstraints>
    <children>
-      <TableView fx:id="kayttajaTable" editable="true" maxWidth="-Infinity" prefHeight="785.0" prefWidth="1625.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+      <TableView fx:id="varausTable" editable="true" maxWidth="-Infinity" prefHeight="785.0" prefWidth="1625.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <columns>
             <TableColumn fx:id="varaajaColumn" editable="false" prefWidth="289.60010319948196" text="VARAAJA" />
             <TableColumn fx:id="alkupvmColumn" prefWidth="199.99993896484375" resizable="false" text="VARAUKSEN ALKUPVM" />
