--- a/src/main/resources/fxml/uusiKayttaja.fxml
+++ b/src/main/resources/fxml/uusiKayttaja.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="600.0" style="-fx-background-color: black; -fx-background-radius: 15px;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.UusiKayttajaController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" stylesheets="@../styles/Styles.css" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="600.0" style="-fx-background-color: black; -fx-background-radius: 15px;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.UusiKayttajaController">
     <children>
         <Button fx:id="luokayttajaNappi" layoutX="224.0" layoutY="501.0" mnemonicParsing="false" onMouseClicked="#luokayttajaNappiPainettu" text="LUO KÄYTTÄJÄ">
             <font>
