--- a/src/main/resources/fxml/uusiResurssi.fxml
+++ b/src/main/resources/fxml/uusiResurssi.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" style="-fx-background-color: black; -fx-background-radius: 15px;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.UusiResurssiController">
+<Pane maxHeight="-Infinity" stylesheets="@../styles/Styles.css" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" style="-fx-background-color: black; -fx-background-radius: 15px;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.UusiResurssiController">
     <children>
         <Label fx:id="itemLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="-1.0" layoutY="63.0" prefHeight="30.0" prefWidth="500.0" text="ANNA TIEDOT:" textAlignment="CENTER" textFill="WHITE">
             <font>
