--- a/src/main/resources/fxml/ResurssiHistoria.fxml
+++ b/src/main/resources/fxml/ResurssiHistoria.fxml
@@ -10,12 +10,12 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane id="bgPane" prefHeight="1166.0" prefWidth="2044.0" stylesheets="@../styles/Styles.css" style="-fx-background-image: url(&quot;/bgLarge.png&quot;);" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.ResurssiHistoriaController">
+<GridPane id="bgPane" prefHeight="1166.0" prefWidth="2044.0" style="-fx-background-image: url(&quot;/bgLarge.png&quot;);" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.ResurssiHistoriaController">
    <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.8" minWidth="0.0" prefWidth="127.20001220703126" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="1623.00009765625" minWidth="10.0" prefWidth="1623.00009765625" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="317.60009765625" minWidth="0.0" prefWidth="43.79990234375009" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="416.80002441406236" minWidth="10.0" prefWidth="200.79997558593755" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.8" minWidth="0.0" prefWidth="136.79998779296875" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="1751.000048828125" minWidth="10.0" prefWidth="1698.4000122070313" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="317.60009765625" minWidth="0.0" prefWidth="126.199951171875" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="416.80002441406236" minWidth="10.0" prefWidth="34.400097656249955" />
    </columnConstraints>
    <rowConstraints>
       <RowConstraints maxHeight="564.8" minHeight="10.0" prefHeight="123.19999847412107" vgrow="SOMETIMES" />
@@ -25,7 +25,7 @@
       <RowConstraints maxHeight="209.60002441406255" minHeight="0.0" prefHeight="35.0" vgrow="SOMETIMES" />
    </rowConstraints>
    <children>
-      <TableView fx:id="varausTable" editable="true" maxWidth="-Infinity" prefHeight="785.0" prefWidth="1625.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+      <TableView fx:id="varausTable" editable="true" maxWidth="-Infinity" prefHeight="785.0" prefWidth="1706.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <columns>
             <TableColumn fx:id="varaajaColumn" editable="false" prefWidth="289.60010319948196" text="VARAAJA" />
             <TableColumn fx:id="alkupvmColumn" prefWidth="199.99993896484375" resizable="false" text="VARAUKSEN ALKUPVM" />
@@ -33,25 +33,25 @@
             <TableColumn fx:id="varausidColumn" editable="false" prefWidth="108.800048828125" resizable="false" text="VARAUSID" />
             <TableColumn fx:id="varauskuvausColumn" editable="false" prefWidth="462.39996337890625" resizable="false" text="KUVAUS" />
             <TableColumn fx:id="palautettuColumn" maxWidth="238.39990234375" minWidth="0.0" prefWidth="132.800048828125" resizable="false" text="AKTIIVISUUS" />
-            <TableColumn fx:id="hyvaksyntaColumn" maxWidth="330.39990234375" minWidth="0.0" prefWidth="173.5999755859375" resizable="false" text="HYVÄKSYNTÄ" />
+            <TableColumn fx:id="hyvaksyntaColumn" maxWidth="330.39990234375" minWidth="0.0" prefWidth="238.4001220703126" resizable="false" text="HYVÄKSYNTÄ" />
          </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <GridPane prefHeight="123.0" prefWidth="1541.0" GridPane.columnSpan="2147483647">
+      <GridPane prefHeight="122.0" prefWidth="1093.0" GridPane.columnIndex="1" GridPane.columnSpan="2">
          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="421.6000030517578" minWidth="10.0" prefWidth="124.80000000000001" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="1283.9999755859376" minWidth="10.0" prefWidth="1190.2" />
-            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="1479.8" minWidth="10.0" prefWidth="409.20002441406245" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="471.2000732421875" minWidth="0.0" prefWidth="98.79997558593755" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="421.6000030517578" minWidth="10.0" prefWidth="142.79998168945312" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="1356.6" minWidth="10.0" prefWidth="1283.0000244140624" />
+            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="1479.8" minWidth="10.0" prefWidth="146.99997558593736" />
+            <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" maxWidth="471.2000732421875" minWidth="0.0" prefWidth="253.00007324218745" />
          </columnConstraints>
          <rowConstraints>
             <RowConstraints maxHeight="60.8" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="67.99999885559082" minHeight="10.0" prefHeight="55.4" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <Button fx:id="takaisinBtn" mnemonicParsing="false" onMouseClicked="#takaisinBtnPainettu" prefHeight="35.0" prefWidth="126.0" text="TAKAISIN" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+            <Button fx:id="takaisinBtn" mnemonicParsing="false" onMouseClicked="#takaisinBtnPainettu" prefHeight="35.0" prefWidth="126.0" text="TAKAISIN" GridPane.halignment="LEFT" GridPane.rowIndex="1">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
@@ -59,7 +59,7 @@
                   <Insets left="10.0" />
                </GridPane.margin>
             </Button>
-            <Label fx:id="usernameLabel" alignment="CENTER_RIGHT" prefHeight="38.0" prefWidth="400.0" text="USERINFO" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <Label fx:id="usernameLabel" alignment="CENTER_RIGHT" prefHeight="38.0" prefWidth="400.0" text="USERINFO" textFill="WHITE" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                <font>
                   <Font name="System Bold" size="26.0" />
                </font>
@@ -67,7 +67,7 @@
                   <Insets right="20.0" />
                </padding>
             </Label>
-            <Button fx:id="LogoutBtn" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="35.0" prefWidth="85.0" text="LOGOUT" GridPane.columnIndex="3" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+            <Button fx:id="LogoutBtn" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="39.0" prefWidth="121.0" text="LOGOUT" GridPane.columnIndex="3" GridPane.halignment="LEFT" GridPane.rowIndex="1">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
@@ -85,10 +85,10 @@
             <Insets />
          </opaqueInsets>
          <GridPane.margin>
-            <Insets right="50.0" />
+            <Insets />
          </GridPane.margin>
       </GridPane>
-      <Label fx:id="varausString" alignment="CENTER" contentDisplay="CENTER" prefHeight="38.0" prefWidth="1038.0" text="RESURSSIN XYZ VARAUKSET" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="1">
+      <Label fx:id="varausString" alignment="CENTER" contentDisplay="CENTER" prefHeight="38.0" prefWidth="1038.0" text="RESURSSIN XYZ VARAUKSET" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
          <font>
             <Font name="System Bold" size="26.0" />
          </font>
