Lokalisoinnin tekoa ja laitettu hakemaan tiedostosta tekstit 5 luokaan

--- a/src/main/resources/fxml/Loginwindow.fxml
+++ b/src/main/resources/fxml/Loginwindow.fxml
@@ -59,7 +59,7 @@
                         <Insets top="10.0" />
                      </VBox.margin>
                   </PasswordField>
-                  <Button mnemonicParsing="false" onMouseClicked="#avaaPalautaSalasana" text="PALAUTA SALASANA" underline="true">
+                  <Button fx:id="testBtn" mnemonicParsing="false" onMouseClicked="#avaaPalautaSalasana" text="PALAUTA SALASANA" underline="true">
                      <VBox.margin>
                         <Insets top="10.0" />
                      </VBox.margin>
