--- a/src/main/resources/fxml/nakyma.fxml
+++ b/src/main/resources/fxml/nakyma.fxml
@@ -22,22 +22,22 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane prefHeight="815.0" prefWidth="1947.0" style="-fx-background-image: url(&quot;/bgLarge.png&quot;);" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.NakymaController" stylesheets="@../styles/Styles.css">
+<GridPane prefHeight="815.0" prefWidth="1947.0" style="-fx-background-image: url(&quot;/bgLarge.png&quot;);" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.NakymaController">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="486.00001831054686" minWidth="0.0" prefWidth="28.39999389648437" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="507.60000610351557" minWidth="0.0" prefWidth="507.60000610351557" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="781.8" minWidth="10.0" prefWidth="703.6000244140625" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="741.8000244140626" minWidth="10.0" prefWidth="189.20002441406245" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="641.8000244140626" minWidth="0.0" prefWidth="107.00004882812505" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="308.800048828125" minWidth="0.0" prefWidth="14.199951171875" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="422.40007324218755" minWidth="10.0" prefWidth="119.60007324218759" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="333.8000000000002" minWidth="10.0" prefWidth="235.60000000000014" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="641.8000244140626" minWidth="0.0" prefWidth="106.20000000000005" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="308.800048828125" minWidth="0.0" prefWidth="13.400000000000091" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="422.40007324218755" minWidth="0.0" prefWidth="0.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="354.0" minWidth="10.0" prefWidth="354.0" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="333.8000000000002" minWidth="0.0" prefWidth="0.0" />
    </columnConstraints>
    <rowConstraints>
       <RowConstraints maxHeight="52.79999389648438" minHeight="10.0" prefHeight="49.59999084472656" valignment="BOTTOM" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="150.00000610351563" minHeight="0.0" prefHeight="14.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="312.80000000000007" minHeight="0.0" prefHeight="88.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="150.00000610351563" minHeight="0.0" prefHeight="59.20000915527342" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="312.80000000000007" minHeight="0.0" prefHeight="43.99999084472657" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="615.0000122070312" minHeight="10.0" prefHeight="552.7999877929688" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="95.80002441406248" minHeight="0.0" prefHeight="62.400012207031295" vgrow="SOMETIMES" />
    </rowConstraints>
@@ -50,8 +50,11 @@
             <Insets right="25.0" top="25.0" />
          </GridPane.margin>
       </Label>
-      <ImageView fx:id="logoView" fitHeight="138.0" fitWidth="483.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowSpan="2" />
-      <TextField fx:id="searchBar" onKeyReleased="#searchFunction" prefHeight="39.0" prefWidth="1149.0" promptText="Etsi..." stylesheets="@../styles/Styles.css" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2">
+      <ImageView fx:id="logoView" fitHeight="138.0" fitWidth="483.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowSpan="2">
+         <GridPane.margin>
+            <Insets bottom="25.0" />
+         </GridPane.margin></ImageView>
+      <TextField fx:id="searchBar" onKeyReleased="#searchFunction" prefHeight="39.0" prefWidth="1149.0" promptText="Etsi..." stylesheets="@../styles/Styles.css" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2" GridPane.valignment="TOP">
          <font>
             <Font size="18.0" />
          </font>
@@ -64,7 +67,7 @@
             <Insets top="25.0" />
          </GridPane.margin>
       </Label>
-      <ChoiceBox fx:id="categorySelect" prefHeight="38.0" prefWidth="227.0" value="NIMI" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+      <ChoiceBox fx:id="categorySelect" prefHeight="38.0" prefWidth="227.0" value="NIMI" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="TOP">
          <items>
             <FXCollections fx:factory="observableArrayList">
                <String fx:value="NIMI" />
@@ -122,16 +125,19 @@
             </Tab>
          </tabs>
       </TabPane>
-      <VBox prefHeight="438.0" prefWidth="394.0" GridPane.columnIndex="6" GridPane.columnSpan="2" GridPane.rowIndex="2" GridPane.rowSpan="2">
+      <VBox prefHeight="599.0" prefWidth="354.0" GridPane.columnIndex="6" GridPane.columnSpan="2" GridPane.rowIndex="3" GridPane.rowSpan="2">
          <children>
-            <Button fx:id="varausBtn" mnemonicParsing="false" onMouseClicked="#varausNappiPainettu" prefHeight="39.0" prefWidth="348.0" stylesheets="@../styles/Styles.css" text="TEE VARAUS">
+            <TitledPane fx:id="kalenteriPane" alignment="CENTER" animated="false" prefHeight="273.0" prefWidth="338.0" text="KALENTERI" textAlignment="CENTER">
                <font>
-                  <Font name="System Bold" size="18.0" />
+                  <Font name="System Bold" size="12.0" />
                </font>
                <VBox.margin>
-                  <Insets top="25.0" />
+                  <Insets />
                </VBox.margin>
-            </Button>
+               <content>
+                  <StackPane fx:id="kalenteriStackPane" prefHeight="178.0" prefWidth="332.0" />
+               </content>
+            </TitledPane>
             <Button fx:id="lisaaresurssiBtn" mnemonicParsing="false" onMouseClicked="#lisaaresurssiNappiPainettu" prefHeight="39.0" prefWidth="348.0" text="LISÄÄ RESURSSI">
                <font>
                   <Font name="System Bold" size="18.0" />
@@ -148,18 +154,13 @@
                   <Insets top="25.0" />
                </VBox.margin>
             </Button>
-            <Button fx:id="henkilostoBtn" mnemonicParsing="false" onMouseClicked="#henkilostoBtnPainettu" prefHeight="39.0" prefWidth="363.0" text="HALLINNOI HENKILÖITÄ">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-               <VBox.margin>
-                  <Insets bottom="25.0" top="25.0" />
-               </VBox.margin>
-            </Button>
             <Button fx:id="hallnnoiBtn" mnemonicParsing="false" onMouseClicked="#hallinnoiBtnPainettu" prefHeight="39.0" prefWidth="363.0" text="HALLINNOI VARAUKSIA">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
+               <VBox.margin>
+                  <Insets top="25.0" />
+               </VBox.margin>
             </Button>
             <Button fx:id="historiaBtn" mnemonicParsing="false" onMouseClicked="#historiaBtnPainettu" prefHeight="39.0" prefWidth="363.0" text="RESURSSIN VARAUSHISTORIA" textOverrun="CLIP">
                <font>
@@ -169,23 +170,20 @@
                   <Insets top="25.0" />
                </VBox.margin>
             </Button>
-            <TitledPane fx:id="kalenteriPane" alignment="CENTER" animated="false" prefHeight="273.0" prefWidth="338.0" text="KALENTERI" textAlignment="CENTER">
+            <Button fx:id="henkilostoBtn" mnemonicParsing="false" onMouseClicked="#henkilostoBtnPainettu" prefHeight="39.0" prefWidth="363.0" text="HALLINNOI HENKILÖITÄ">
                <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font name="System Bold" size="18.0" />
                </font>
                <VBox.margin>
-                  <Insets top="25.0" />
+                  <Insets bottom="25.0" top="25.0" />
                </VBox.margin>
-               <content>
-                  <StackPane fx:id="kalenteriStackPane" prefHeight="178.0" prefWidth="332.0" />
-               </content>
-            </TitledPane>
+            </Button>
          </children>
          <padding>
             <Insets left="10.0" right="10.0" />
          </padding>
          <GridPane.margin>
-            <Insets top="25.0" />
+            <Insets />
          </GridPane.margin>
       </VBox>
       <DatePicker fx:id="datePicker" disable="true" opacity="0.0" prefHeight="35.0" prefWidth="330.0" GridPane.columnIndex="3" />
@@ -199,7 +197,7 @@
                   <Insets right="10.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="salasananvaihtoBtn" mnemonicParsing="false" onMouseClicked="#salasananvaihtoNappiPainettu" prefHeight="30.0" prefWidth="123.0" text="SALASANAN VAIHTO" textOverrun="CLIP">
+            <Button fx:id="salasananvaihtoBtn" mnemonicParsing="false" onMouseClicked="#salasananvaihtoNappiPainettu" prefHeight="39.0" prefWidth="226.0" text="SALASANAN VAIHTO" textOverrun="CLIP">
                <font>
                   <Font name="System Bold" size="10.0" />
                </font>
@@ -209,6 +207,14 @@
             <Insets top="5.0" />
          </GridPane.margin>
       </HBox>
+      <Button fx:id="varausBtn" mnemonicParsing="false" onMouseClicked="#varausNappiPainettu" prefHeight="39.0" prefWidth="348.0" stylesheets="@../styles/Styles.css" text="TEE VARAUS" GridPane.columnIndex="7" GridPane.rowIndex="2" GridPane.valignment="TOP">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+         <GridPane.margin>
+            <Insets left="7.0" right="10.0" />
+         </GridPane.margin>
+      </Button>
    </children>
    <padding>
       <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
